[project]
name = "pipcheck"
description = "This is a python3 program that checks if the libraries in the requirements.txt file are up to date."
version = "0.1.0"
authors = [
  { name = "Bapth", email = "py.bapth@gmail.com" }
]
dependencies = [
  "requests >= 2.30",
  "beautifulsoup4 >= 4.12.2"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 58.0", "wheel"]